tests/output/test_invalid_token_output.txt
    @;
    ^ Invalid
Error on line 2 (column 5): Invalid character

Process finished with exit code 0
